[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/scroll_h.png" type="Texture" id=1]
[ext_resource path="res://Nodes/CustomButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://CustomizeCard.gd" type="Script" id=3]
[ext_resource path="res://Nodes/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/Font/arcadeheader.tres" type="DynamicFont" id=5]
[ext_resource path="res://Nodes/ColorSelector.tscn" type="PackedScene" id=6]
[ext_resource path="res://Nodes/SkinColorSelector.tscn" type="PackedScene" id=7]

[node name="CustomizeCard" type="ColorRect"]
margin_right = 649.0
margin_bottom = 361.0
color = Color( 0, 0, 0, 0.796078 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.5
margin_top = -158.0
margin_right = 209.5
margin_bottom = 158.0
texture = ExtResource( 1 )
stretch_mode = 5
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 349.0
margin_top = 75.0
margin_right = 486.0
margin_bottom = 289.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_right = 137.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" type="Button" parent="VBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Hair Color"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hair" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 43.0
margin_right = 137.0
margin_bottom = 83.0
size_flags_horizontal = 5
button_name = "hair"

[node name="SkinColor" type="ColorRect" parent="VBoxContainer"]
margin_top = 87.0
margin_right = 137.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkinPickerButton" type="Button" parent="VBoxContainer/SkinColor"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Skin Color"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shirt" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 130.0
margin_right = 137.0
margin_bottom = 170.0
size_flags_horizontal = 5
button_name = "shirt"

[node name="Pants" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 174.0
margin_right = 137.0
margin_bottom = 214.0
size_flags_horizontal = 5
button_name = "pants"

[node name="Button" parent="." instance=ExtResource( 4 )]
margin_left = 150.0
margin_top = 52.0
margin_right = 245.0
margin_bottom = 93.0
label = "Back"

[node name="ColorSelector" parent="." instance=ExtResource( 6 )]
visible = false

[node name="SkinColorSelector" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="VBoxContainer/ColorRect/ColorPickerButton" to="." method="_on_ColorPickerButton_pressed"]
[connection signal="change" from="VBoxContainer/Hair" to="." method="_on_Hair_change"]
[connection signal="pressed" from="VBoxContainer/SkinColor/SkinPickerButton" to="." method="_on_SkinPickerButton_pressed"]
[connection signal="change" from="VBoxContainer/Shirt" to="." method="_on_Shirt_change"]
[connection signal="change" from="VBoxContainer/Pants" to="." method="_on_Pants_change"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="color_change" from="ColorSelector/Grid" to="." method="_on_Grid_color_change"]
[connection signal="color_change_skin" from="SkinColorSelector" to="." method="_on_SkinColorSelector_color_change_skin"]

[editable path="ColorSelector"]
